# adithangi

./: CMakeLists.txt  Makefile  README.md  ai_server.py  captured_creds.csv  dashboard.html  dashboard_server.py  fake_services.py  game_client.cpp  honeypot  honeypot.cpp  host.key  ids_events.json  kitsune.py  order  scanner.cpp  shadow_realm.py  sniffer  sniffer.cpp  start_adithangi.sh  start_honeypot.sh
